--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -16,5 +16,6 @@
   "item description": "Dastur",
   "sales employee name": "Menedjer",
   "phone": "Telefon raqam",
-  "create excel" : "Excel fayl yaratish"
+  "create excel" : "Excel fayl yaratish",
+  "all": "Barchasi"
 }
